update style index, fix bug ofr img on mobile

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -554,7 +554,7 @@ label {
   }
   .myself .presentation .portrait {
     margin: auto;
-    width: 75%;
+    width: 100%;
     display: flex;
     justify-content: center;
   }
