--- a/assets/sass/layout/_media-index.scss
+++ b/assets/sass/layout/_media-index.scss
@@ -35,7 +35,7 @@
                 }
                 .portrait{
                 margin: auto;
-                width: 75%;
+                width: 100%;
                 display: flex;
                 justify-content: center;
                 img{
